Add: Dennis: Color Contrast Tools

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -377,11 +377,11 @@
       There are many free tools that can help you check contrast, find colours with
       sufficient contrast or simulate certain colour vision deficiencies. 
     </p>
-    <p>Most contrast analysis tools now support the 
+    <p>Most contrast analysis tools now support the
       <a href="http://www.w3.org/TR/2008/REC-WCAG20-20081211/#contrast-ratiodef">contrast algorithm</a>
-      defined in the 
+      defined in the
       Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2.0 and will tell
-      you whether the contrast ratio pass at 
+      you whether the contrast ratio pass at
       <a href="http://www.w3.org/TR/2008/REC-WCAG20-20081211/#visual-audio-contrast-contrast"
       title="success criterion 1.4.3 for minimum contrast">Level AA</a>
       or at
@@ -505,6 +505,10 @@
         developed by Andrew Somers of Myndex. See also the
         <a href="https://github.com/Myndex/SAPC-APCA">GitHub repository for the <abbr>APCA</abbr> Contrast Calculator</a>.
         <!--Referrer (30.11.2020): https://twitter.com/HenriHelvetica/status/1333303650794528768 -->
+      </li>
+      <li>Dennis:
+        <a href="http://www.webaxe.org/color-contrast-tools/">Color Contrast Tools</a>,
+        <i class="website">Web Axe</i>, 23.01.2016.
       </li>
     </ul>
 
