Add: A11y accessibility check for text colour on background image

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -510,6 +510,10 @@
         <a href="http://www.webaxe.org/color-contrast-tools/">Color Contrast Tools</a>,
         <i class="website">Web Axe</i>, 23.01.2016.
       </li>
+      <li>
+        <a href="https://www.brandwood.com/a11y/">A11y accessibility check for text colour on background image</a>:
+        this is a web-based tool that allows you to upload an image and have text contrast issues tested.
+      </li>
     </ul>
 
     <h3>Colour Blindness Simulators</h3>
