Add Microsoft resources about PowerPoint

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -196,6 +196,29 @@
         <a href="https://support.microsoft.com/de-de/topic/gestalten-barrierefreier-powerpoint-pr%C3%A4sentationen-f%C3%BCr-personen-mit-behinderungen-6f7772b2-2f33-4bd2-8ca7-dae3b2b3ef25" hreflang="de" lang="de">Gestalten barrierefreier PowerPoint-Präsentationen für Personen mit Behinderungen</a>.
       </li>
       <li>
+        <a href="https://support.microsoft.com/en-us/office/change-the-color-of-hyperlink-text-throughout-a-presentation-77c55b2d-3b2e-4ec4-924c-3165972e1bfa">Change the color of hyperlink text throughout a presentation</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 24.06.2021).
+        <!--German: https://support.microsoft.com/de-de/office/%C3%A4ndern-der-farbe-von-linktext-in-der-gesamten-pr%C3%A4sentation-77c55b2d-3b2e-4ec4-924c-3165972e1bfa -->
+      </li>
+      <li>
+        <a href="https://support.microsoft.com/en-us/office/accessibility-features-in-video-playback-on-powerpoint-ef62b701-c0ad-48e8-8473-4e8dbb0f7dd8">Accessibility features in video playback on PowerPoint</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 24.06.2021).
+        <!--German: "Barrierefreiheitsfeatures bei der Wiedergabe von Videos in PowerPoint": https://support.microsoft.com/de-de/office/barrierefreiheitsfeatures-bei-der-wiedergabe-von-videos-in-powerpoint-ef62b701-c0ad-48e8-8473-4e8dbb0f7dd8 -->
+      </li>
+      <li>
+        <a href="https://support.microsoft.com/en-us/office/add-closed-captions-or-subtitles-to-media-in-powerpoint-df091537-fb22-4507-898f-2358ddc0df18">Add closed captions or subtitles to media in PowerPoint</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 24.06.2021).
+        <!--German: "Hinzufügen von Untertiteln zu Medien in PowerPoint": https://support.microsoft.com/de-de/office/hinzuf%C3%BCgen-von-untertiteln-zu-medien-in-powerpoint-df091537-fb22-4507-898f-2358ddc0df18 -->
+      </li>
+      <li>
+        <a href="https://support.microsoft.com/en-us/office/make-slides-easier-to-read-by-using-the-reading-order-pane-863b5c1c-4f19-45ec-96e6-93a6457f5e1c">Make slides easier to read by using the Reading Order pane</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 24.06.2021).
+      </li>
+      <li><span lang="de">
+        <a href="https://support.microsoft.com/de-de/office/video-erstellen-von-barrierefreieren-folien-794fc5da-f686-464d-8c29-1c6ab8515465">Video: Erstellen von barrierefreieren Folien</a>,</span>
+        <i class="website">Microsoft Office Support</i> (accessed on 24.06.2021).
+      </li>
+      <li>
         <a href="https://webaim.org/techniques/powerpoint/">PowerPoint Accessibility</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in March 2018.
       </li>
