Add: MacDonald: The Future Web

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -514,6 +514,10 @@
           <a href="https://www.telerik.com/blogs/7-ways-to-make-your-angular-app-more-accessible">7 Ways to Make Your Angular App More Accessible</a>,
           <i class="blog">Progress blog</i>, 20.08.2019.
         </li>
+        <li>MacDonald, Matthew:
+          <a href="https://medium.com/young-coder/the-future-web-will-canvas-rendering-replace-the-dom-847be872884c">The Future Web: Will Canvas Rendering Replace the <abbr>DOM</abbr>?</a>,
+          <i class="blog">Young Coder</i> (on Medium), 17.05.2021 (six-minute read).
+        </li>
         <li>MacManus, Richard:
           <a href="https://thenewstack.io/google-docs-switches-to-canvas-rendering-sidelining-the-dom/">Google Docs Switches to Canvas Rendering, Sidelining the <abbr>DOM</abbr></a>,
           <i class="website">The New Stack</i>, 24.05.2021.
