Add: Stoner: Meet the Disabled Streamers Who Are Transforming the Industry

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -323,6 +323,12 @@
         <a href="https://www.youtube.com/watch?v=RWQcuBigOj0">How Accessible Were 2020's Biggest Games?</a>
         (<i class="ytchannel">Game Maker's Toolit</i> on YouTube, 19 minutes, 11.12.2020).
       </li>
+      <li>Stoner, Grant:
+        <a href="https://www.wired.com/story/disabled-streamers-transforming-games-industry/">Meet the Disabled Streamers Who Are Transforming the Industry</a>,
+        <i class="website">Wired</i>, 20.05.2021.
+        <br />Subtitle:
+        <q>Gamers with disabilities aren't waiting for big companies to catch up: They're forming their own communities and making gameplay more accessible than ever.</q>
+      </li>
     </ul>
 
 
