Add: EASI: Creating Accessible Tables in Microsoft Word

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -134,6 +134,7 @@
         <i class="website">Boîte à outils d'accessibilité numérique - Gouvernement du Canada</i>,</span> 2010.
       </li>
     </ul>
+
     <h3>Microsoft Word</h3>
     <ul>
       <li>
@@ -174,6 +175,11 @@
         <a href="https://www.technologie-handicap-accessibilite.net/dossiers/creer-des-documents-accessibles/documents-word-accessibles/">Documents Word accessibles</a>,
         <i class="website">Technologie, Handicap, Accessibilité</i></span>, last updated on 19.07.2015.
       </li>
+      <li>
+        <a href="http://www.easi.cc/archive/col-tables/week3/02_CreatingAccessibleTablesInMicrosoftWord.htm">Creating Accessible Tables in Microsoft Word</a>,
+        <i class="website"><abbr>EASI</abbr>: Equal Access to Software and Information</i> (no date; accessed on 08.07.2021).
+        <br />This guide is based on Word 2003 and Word 2010 and is therefore partially outdated.
+      </li>
       <!--line height:
         * Change line spacing in Word 2010: http://freemicrosoftword2010tutorials.com/change-line-spacing-in-word-2010-configure-default-line-height-settings.htm
         * how to calculate line height in single line spacing paragraph: https://social.msdn.microsoft.com/Forums/en-US/6198f5be-3bb6-4ebf-9f2e-35447d087b45/how-to-calculate-line-height-in-single-line-spacing-paragraph
@@ -185,7 +191,6 @@
         * Lisa Doe: "How to Create a Fillable Form in Word | Microsoft Word Tutorials", 46 minutes, 14.04.2020: https://www.youtube.com/watch?v=T4aRXxeTD-Y
           Looks like how not to do it for accessibility (relies on text boxes and shapes; does not use Word's form elements).
       -->
-    </ul>
 
     <h3>Microsoft PowerPoint</h3>
     <ul>
@@ -246,6 +251,7 @@
         this document covers Visio Professional 2016 and more recent versions.
       </li>
     </ul>
+
     <h3>LibreOffice</h3>
     <ul>
       <li>
@@ -261,7 +267,10 @@
         <!--"Editing Accessibility/Text Attributes": https://wiki.documentfoundation.org/Accessibility/TextAttributes - this is actually API documentation-->
       </li>
     </ul>
-    <!--AccessODF: Mapping AccessODF Checks to Web Content Accessibility Guidelines (WCAG) 2.0: http://accessodf.sourceforge.net/MappingToWCAG.html -->
+    <!--
+      * AccessODF: Mapping AccessODF Checks to Web Content Accessibility Guidelines (WCAG) 2.0: http://accessodf.sourceforge.net/MappingToWCAG.html
+    -->
+
     <h3>Other Applications (Including Google Docs)</h3>
     <ul>
       <li>
