Add: Centeno et al: Web Accessibility Evaluation Tools: A Survey and Some Improvements

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -883,6 +883,11 @@
       <a href="https://www.matuzo.at/blog/building-the-most-inaccessible-site-possible-with-a-perfect-lighthouse-score/">Building the most inaccessible site possible with a perfect Lighthouse score</a>,
       <i class="blog">Manuel Matuzović</i>, 31.05.2019.
     </li>
+    <li>Centeno, Vicente Luque; Kloos,  Carlos Delgado; Fisteus, Jesús Arias; Álvarez, Luis Álvarez:
+      <a href="https://www.sciencedirect.com/science/article/pii/S1571066106002477">Web Accessibility Evaluation Tools: A Survey and Some Improvements</a>,
+      <i class="journal">Electronic Notes in Theoretical Computer Science</i>, Volume 157, Issue 2, 22 May 2006.
+      <!--@@download PDF-->
+    </li>
   </ul>
   <!--
   <section>
