Add: h3: Dark Modes and Dark Themes

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1132,6 +1132,18 @@
           <i class="website">Adobe Xd Ideas</i>, 22.04.2020.
         </li>
       </ul>
+
+      <h3>Dark Modes and Dark Themes</h3>
+      <ul>
+        <li>Byrne-Haber, Sheri:
+          <a href="https://uxdesign.cc/accessibility-and-dark-ui-themes-f01001339b65">Dark <abbr>UI</abbr> themes are new and cool — but are they accessible?</a>,
+          <i class="website"><abbr>UX</abbr> Collective</i>, 16.09.2019 (4-minute read).
+        </li>
+        <li>
+          <a href="https://www.boia.org/blog/dark-mode-can-improve-text-readability-but-not-for-everyone">Dark Mode Can Improve Text Readability — But Not for Everyone</a>,
+          <i class="blog">Bureau of Internet Accessibility blog</i>, 07.07.2021.
+        </li>
+      </ul>
     </section>
 
     <section>
