Add: Veroniiiica: How to Create Accessible PowerPoints

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -354,6 +354,10 @@
         <a href="https://support.office.com/en-us/article/Accessibility-support-for-Visio-7ac46c50-02c2-44ab-aa1c-711482099276">Accessibility support for Visio</a>:
         this document covers Visio Professional 2016 and more recent versions.
       </li>
+      <li>Veroniiiica:
+        <a href="https://www.perkinselearning.org/technology/blog/how-create-accessible-powerpoints">How to Create Accessible PowerPoints</a>,
+        <i class="blog">Perkins eLearning blog</i>, 25.10.2017.
+      </li>
     </ul>
 
     <h3>LibreOffice</h3>
