Add: Forms with LibreOffice Writer

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -378,6 +378,20 @@
     <!--
       * AccessODF: Mapping AccessODF Checks to Web Content Accessibility Guidelines (WCAG) 2.0: http://accessodf.sourceforge.net/MappingToWCAG.html
     -->
+    <p>Forms created in LibreOffice Writer or OpenOffice Writer can be exported to <abbr>PDF</abbr> forms;
+      one only needs to activate the checkbox &ldquo;Create <abbr>PDF</abbr> form&rdquo; in the &ldquo;<abbr>PDF</abbr> Options&rdquo; dialog box.
+      There are no resources that discuss the accessibility of forms created in Writer or exported as <abbr>PDF</abbr> from Writer.
+    </p>
+    <!--
+      * "Creating a fillable PDF form using LibreOffice Writer", Jurgen Gaeremyn, 15 minutes, 26.03.2015: https://www.youtube.com/watch?v=fC1g7tT997w
+      * "Ausfüllbares PDF Formular erstellen - Kostenlos [OpenOffice]", Aktien2Know, 7 minutes, 05.03.2019: https://www.youtube.com/watch?v=nqKzP8kgaIc
+        When creating form fields in OpenOffice Writer and exporting a form as PDF, you get fillable form fields in Adobe Acrobat.
+        [When doing the same in LibreOffice 7.1.4, there are no fillable form fields in the exported PDF, unless you check "Create PDF form" in the PDF Options dialog.
+        When you do the same in OpenOffice.org 3.3, you get fillable form fields in the PDF doc.]
+        The video claims there is a bug related to radio buttons, but one of the comments points out that radio buttons in the same group need the same Name (as opposed to Label).
+      * "Create Fillable PDF Files (Forms) with Free and Open Source Software (LibreOffice Writer)", Open Source Bug, 5 minutes, 21.01.2020: https://www.youtube.com/watch?v=1mNJUSfX1vY
+      * @@check "How to create fillable PDF forms in LibreOffice Writer", https://www.youtube.com/watch?v=mbZLwLOYefE
+    -->
 
     <h3>Other Applications (Including Google Docs)</h3>
     <ul>
