Add: Rayius: WCAG 2.1 and PDF Accessibility

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -432,7 +432,7 @@
       <li>Erle, Markus:
         <a href="https://www.youtube.com/watch?v=YcRbZgPVfQ4"><abbr>PDF</abbr>/<abbr>UA</abbr> Basics &mdash; Markus Erle, wertewerk</a>
         (<i class="ytchannel"><abbr>PDF</abbr> Association</i>, 22.06.2014.
-        This is a video recording of a presentation at the <abbr>PD</abbr>F Days Europe 2014 (June 2014).
+        This is a video recording of a presentation at the <abbr>PDF</abbr> Days Europe 2014 (June 2014).
       </li>
       <li>Accede <abbr>PDF</abbr> Project:
         <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
@@ -655,6 +655,16 @@
       <li>Johnson, Duff:
         <a href="https://www.pdfa.org/apple-tags-pdf/">Apple tags <abbr>PDF</abbr></a>,
         <i class="website"><abbr>PDF</abbr> Association</i>, 13.11.2019.
+      </li>
+      <li>Rayius, Paul:
+        <a href="https://commonlook.com/wcag-2-1-and-pdf-accessibility/"><abbr>WCAG</abbr> 2.1 and <abbr>PDF</abbr> Accessibility</a>,
+        <i class="website">Common Look</i>, 25.06.2019.
+        <br />Discusses some of the success criteria that were added in <abbr>WCAG</abbr> 2.1 and their relevance to <abbr>PDF</abbr>.
+        Some of these new criteria are typically not relevant to <abbr>PDF</abbr>:  2.2.6 (Timeouts) and 2.5.2 (Pointer Cancellation).
+      </li>
+      <li>Reid, Loretta Guarino; Haritos-Shea, Katie; Chisholm, Wendy:
+        <a href="https://www.w3.org/WAI/GL/WCAG-PDF-TECHS-20010913/"><abbr>PDF</abbr> Techniques for Web Content Accessibility Guidelines 13 September</a> (Internal Working Draft 13 September 2001),
+        <i class="website">World Wide Web Consortium</i>, 2001. (This document is out of date and of historical interest only.)
       </li>
       <!--https://mosen.org/saying-goodbye-to-the-mac/
         comment by Sam, 24/11/2016 (10:30 am):
