--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -601,6 +601,10 @@
         <a href="https://www.youtube.com/watch?v=kvZN4WgsE3k">Making Accessible Word Documents Accessible <abbr>PDFs</abbr></a>
         (<i class="ytchannel">Adam Barragato</i> on YouTube, 3 minutes, 21.09.2017).
       </li>
+      <li>
+        <a href="https://www.ssa.gov/accessibility/checklists/pdf/pdfchecklist.html#collapsible=Test7"><abbr>PDF</abbr> 508 Accessibility Checklist</a>,
+        <i class="website">Social Security Administration</i>, 12.03.2018.<!--DTD XHTML 1.0 Transitional-->
+      </li>
       <!--
         * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
         * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
