Add: Rivenburgh: The PDF Accessibility Guide

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -605,6 +605,10 @@
         <a href="https://www.ssa.gov/accessibility/checklists/pdf/pdfchecklist.html#collapsible=Test7"><abbr>PDF</abbr> 508 Accessibility Checklist</a>,
         <i class="website">Social Security Administration</i>, 12.03.2018.<!--DTD XHTML 1.0 Transitional-->
       </li>
+      <li>Rivenburgh, Kris:
+        <a href="https://medium.com/@krisrivenburgh/the-pdf-accessibility-guide-how-to-make-your-portable-documents-accessible-6e77a21a098f">The <abbr>PDF</abbr> Accessibility Guide: How to Make Your Portable Documents Accessible</a>,
+        <i class="blog">Kris Rivenburgh</i> (on Medium), 17.06.2019.
+      </li>
       <!--
         * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
         * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
