fix various validation issues

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -180,6 +180,7 @@
         <i class="website"><abbr>EASI</abbr>: Equal Access to Software and Information</i> (no date; accessed on 08.07.2021).
         <br />This guide is based on Word 2003 and Word 2010 and is therefore partially outdated.
       </li>
+    </ul>
       <!--line height:
         * Change line spacing in Word 2010: http://freemicrosoftword2010tutorials.com/change-line-spacing-in-word-2010-configure-default-line-height-settings.htm
         * how to calculate line height in single line spacing paragraph: https://social.msdn.microsoft.com/Forums/en-US/6198f5be-3bb6-4ebf-9f2e-35447d087b45/how-to-calculate-line-height-in-single-line-spacing-paragraph
@@ -824,7 +825,7 @@
         <q cite="http://synote.com/about/">[the tool’s] interactive transcript allows viewers to search videos for any word or phrase and replay the video from that point onwards.
         Screenshots with the corresponding transcript and notes can be printed out with QR codes to replay any part of the recording on any mobile device.
         Synote can also add interactive quizzes and polls to videos and produce playlists of clips as well as many other features.</q>
-        </del><ins datetime="2021-04-06">This site was unreachable in early April 2021.</del>
+        </del><ins datetime="2021-04-06">This site was unreachable in early April 2021.</ins>
       </li>
     </ul>
     <p>The above list does not cover tools for adding captions or subtitles using respeaking and voice recognition.</p>
@@ -936,7 +937,7 @@
         <br />This video covers a number of challenges involved in subtitle television programs.
         For example, news programs are sometimes updated with new sections a few minutes before the start of the program.
         Subtitling live broadcasts relies on respeaking, which also has its challenges, such as homophones (<abbr>e.g.</abbr> <span lang="de">Lehre</span> versus <span lang="de">Leere</span>,
-        or <span lang="de">Punkt</abbr> as a noun versus <span lang="de">Punkt</abbr> to insert a full stop).
+        or <span lang="de">Punkt</span> as a noun versus <span lang="de">Punkt</span> to insert a full stop).
         The interviewee also explains when and how different colours for subtitles are used.
         When subtitling live interviews, some information may get shortened or partially skipped.
       </li>
@@ -1097,7 +1098,7 @@
       </li>
       <li><span lang="de">
         <a href="https://www.youtube.com/watch?v=1r-IGfQ5Ryg">Audiodeskription im <abbr>ORF</abbr></a>
-        (<i class="ytchannel">mabacher<abbr>TV<abbr></i> on YouTube, 10 minutes, 22.11.2017).
+        (<i class="ytchannel">mabacher<abbr>TV</abbr></i></span> on YouTube, 10 minutes, 22.11.2017).
         <br />This video is about the audio description for sports programs at the Austrian broadcaster <abbr>ORF</abbr>.
         In contrast with audio description for films, this is not a description that supplements the standard audio track but replaces it.
         However, the video explains very well why audio description is important for people with visual impairments
@@ -1410,8 +1411,8 @@
         <ul>
           <!--<li><del datetime="2020-11-08">
             <a href="http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/dale.chall.html">Readability: Dale-Chall Readability Formula</a>;
-            koRpus - An R Package for Text Analysis: http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/00Index.html</del>-->
-          </li>
+            koRpus - An R Package for Text Analysis: http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/00Index.html</del>
+          </li>-->
           <li>
             <a href="https://cran.r-project.org/web/packages/koRpus/koRpus.pdf">Package ‘koRpus’ (documentation)</a>.<!--@@receck link, Nov 2020-->
           </li>
@@ -1607,7 +1608,7 @@
           a single-page handout (in German) with a few selected accessibility guidelines for presentations with Microsoft PowerPoint (version 2016) or LibreOffice Impress (version 7).
         </li>
       </ul>
-    <section>
+    </section>
 
     <!--
     <section>
